Layout template + static Bootstrap files (CSS, JS) + edit settings + edit "hello world" template (to use layout)

--- a/ui/templates/hello/hello.html
+++ b/ui/templates/hello/hello.html
@@ -1,1 +1,9 @@
-Hello world!
+{% extends 'layout/base.html' %}
+
+{% block content %}
+  <div class="row">
+    <div class="col-lg">
+      Hello world!
+    </div>
+  </div>
+{% endblock %}
