--- a/ui/templates/auth/login.html
+++ b/ui/templates/auth/login.html
@@ -3,19 +3,35 @@
 {% block content %}
   <div class="row">
     <div class="col-lg">
+      {% if flash_success %}
+        <div class="alert alert-success">{{ flash_success }}</div>
+      {% endif %}
+
+      {% if flash_error %}
+        <div class="alert alert-danger">{{ flash_error }}</div>
+      {% endif %}
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg">
       <h1>Login</h1>
+
+      {{ form.non_field_errors }}
 
       <form method="POST">
         {% csrf_token %}
-        
+
         <div class="form-group">
           <label for="username">User name:</label>
           <input type="text" name="username" id="username" class="form-control" />
+          {{ form.username.errors }}
         </div>
 
         <div class="form-group">
           <label for="password">Password:</label>
           <input type="password" name="password" id="password" class="form-control" />
+          {{ form.password.errors }}
         </div>
 
         <button type="submit">Login</button>
