--- a/ui/templates/layout/base.html
+++ b/ui/templates/layout/base.html
@@ -23,6 +23,10 @@
         </a>
 
         <ul class="navbar-nav mr-auto">
+          <li class=nav-item">
+            <a class="nav-link" href="/horses">All Horses</a>
+          </li>
+
           {% if not logged_in %}
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
