--- a/ui/templates/layout/base.html
+++ b/ui/templates/layout/base.html
@@ -37,6 +37,10 @@
             </li>
           {% else %}
             <li class="nav-item">
+              <a class="nav-link" href="/horse">Add</a>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
             </li>
           {% endif %}
