--- a/ui/templates/data/horseList.html
+++ b/ui/templates/data/horseList.html
@@ -5,6 +5,14 @@
 {% block content %}
   <div class="row">
     <div class="col-lg">
+      {% if flash_error %}
+        <div class="alert alert-danger">{{ flash_error }}</div>
+      {% endif %}
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg">
       <h2>All Horses</h2>
 
       <table class="table table-striped">
@@ -16,6 +24,7 @@
             <th scope="col">Gender</th>
             <th scope="col">Breed</th>
             <th scope="col">Color</th>
+            <th scope="col">Edit</th>
           </tr>
         </thead>
 
@@ -28,10 +37,13 @@
               <td>{% gender horse.gender %}</td>
               <td>{% breed horse.breed %}</td>
               <td>{% color horse.color %}</td>
+              <td>
+                <a href="/horse/{{ horse.id }}" class="btn btn-success btn-sm" role="button">Edit <i class="far fa-edit"></i></a>
+              </td>
             </tr>
           {% empty %}
             <tr>
-              <td colspan="6">0 horses found</td>
+              <td colspan="7">0 horses found</td>
             </tr>
           {% endfor %}
         </tbody>
